tests/paczka1/small_fuzzy/45313132.err
Error in line 1: 0eOvwUgz A554 35,9
Error in line 12: 95KeP3vcr A730 2,6
